@@ -77,6 +77,9 @@
     <key name="commit-lock-id" datatype="integer" required="no">
       <description>See the RelStorage README.txt file.</description>
     </key>
+    <key name="create-schema" datatype="boolean" default="true">
+      <description>See the RelStorage README.txt file.</description>
+    </key>
   </sectiontype>
 
   <sectiontype name="postgresql" implements="relstorage.adapter"
